--- a/css/about.css
+++ b/css/about.css
@@ -91,6 +91,8 @@
   background-repeat: no-repeat;
   background-size: cover;
   transition: .5s;
+
+  overflow: hidden;
 }
 
 .about .left span:nth-child(1) {
