--- a/css/about.css
+++ b/css/about.css
@@ -65,8 +65,8 @@
 }
 
 .about .left .card:before {
-  overflow: hidden;
   border-radius: 20px;
+  overflow: hidden;
   content: '';
   position: absolute;
   width: 100%;
@@ -82,6 +82,8 @@
   width: 100%;
   height: 100%;
   display: flex;
+  border-radius: 20px;
+  overflow: hidden;
 }
 
 .about .left span {
