--- a/css/resume.css
+++ b/css/resume.css
@@ -20,47 +20,15 @@
   justify-content: center;
 }
 
-.resume .pdf {
+.resume .cvContainer {
   width: 100%;
   height: 400px;
   overflow: hidden;
 }
 
-.resume .pdf iframe {
+.resume .cvContainer iframe {
   width: 100%;
   height: 100%;
-}
-
-.resume .test {
-  width: 100%;
-  /* height: 800px; */
-  overflow: hidden;
-
-  /* background-image: url("../uploads/resume.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain; */
-  /* text-align: center; */
-}
-
-/* .resume .test img {
-  height: 100%;
-  border: 1px solid var(--primaryColor);
-} */
-
-.resume ul { 
-  list-style-type: disc; 
-  list-style-position: inside; 
-}
-.resume ul ul, ol ul { 
-  list-style-type: circle; 
-  list-style-position: inside; 
-  margin-left: 15px; 
-}
-
-.resume li
-{
-    display: list-item;
 }
 
 .resume .download {
